--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.reddyetwo.hashmypass.app">
 
     <application
+        android:name=".HashMyPassApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -50,6 +51,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
+
+        <receiver android:name=".util.MasterKeyAlarmManager"></receiver>
     </application>
 
 </manifest>
