--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,17 @@ android {
         applicationId "com.reddyetwo.hashmypass.app"
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0.0 beta1"
+        versionCode 2
+        versionName "1.0.0 beta2"
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
