--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-v4:19.0.+"
+    compile "com.android.support:support-v4:19.1.0"
+    compile 'com.github.gabrielemariotti.cards:library:1.7.2'
+    compile 'com.github.gabrielemariotti.cards:library-extra:1.7.2'
 }
