--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
-
+    compileSdkVersion 20
+    buildToolsVersion '20.0.0'
     defaultConfig {
-        applicationId "com.reddyetwo.hashmypass.app"
+        applicationId 'com.reddyetwo.hashmypass.app'
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 3
-        versionName "1.1.0 beta1"
+        versionName '1.1.0 beta1'
     }
     buildTypes {
         release {
@@ -20,11 +19,13 @@ android {
     lintOptions {
         abortOnError false
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-v4:19.1.0"
+    compile 'com.android.support:cardview-v7:+'
     compile 'com.github.gabrielemariotti.cards:library:1.7.3'
     compile 'com.github.gabrielemariotti.cards:library-extra:1.7.3'
 }
