--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,81 +17,95 @@
     * You should have received a copy of the GNU General Public License
     * along with Hash my pass.  If not, see <http://www.gnu.org/licenses/>.
     *
-    -->
-
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.reddyetwo.hashmypass.app">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.reddyetwo.hashmypass.app" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk tools:node="replace" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".HashMyPassApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Hashmypass">
+        android:theme="@style/Theme.Hashmypass" >
         <activity
-            android:theme="@style/Theme.Hashmypass"
-            android:name=".CardsMainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.Hashmypass"
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".AddProfileActivity"
-            android:label="@string/action_add_profile">
+            android:label="@string/action_add_profile" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CardsMainActivity"/>
+                android:value=".CardsMainActivity" />
         </activity>
         <activity
             android:name=".EditProfileActivity"
-            android:label="@string/action_edit_profile">
+            android:label="@string/action_edit_profile" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CardsMainActivity"/>
+                android:value=".CardsMainActivity" />
         </activity>
         <activity
             android:name=".ManageTagsActivity"
-            android:label="@string/action_manage_tags">
+            android:label="@string/action_manage_tags" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CardsMainActivity"/>
+                android:value=".CardsMainActivity" />
         </activity>
         <activity
             android:name=".BrowserIntegrationActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.Dialog">
-            <intent-filter android:label="@string/app_name">
-                <action android:name="android.intent.action.SEND"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+            <intent-filter android:label="@string/app_name" >
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/action_settings">
+            android:label="@string/action_settings" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CardsMainActivity"/>
+                android:value=".CardsMainActivity" />
         </activity>
 
-        <receiver android:name=".util.MasterKeyAlarmManager"/>
+        <receiver android:name=".util.MasterKeyAlarmManager" />
 
         <activity
             android:name=".TutorialActivity"
-            android:noHistory="true"
             android:label="@string/title_activity_tutorial"
+            android:noHistory="true"
             android:screenOrientation="portrait"
-            android:theme="@style/tutorialStyle">
+            android:theme="@style/tutorialStyle" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CardsMainActivity"/>
+                android:value=".CardsMainActivity" />
+        </activity>
+        <activity
+            android:name=".CalculatePasswordActivity"
+            android:label="@string/title_activity_calculate_password"
+            android:theme="@style/Theme.Transparent"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.reddyetwo.hashmypass.app.CardsMainActivity" />
         </activity>
     </application>
+
 </manifest>
