--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.reddyetwo.hashmypass.app'
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 5
-        versionName '1.2.0 beta2'
+        versionCode 6
+        versionName '1.2.1'
     }
     buildTypes {
         release {
