--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,25 +39,20 @@
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".AddProfileActivity"
             android:windowSoftInputMode="stateHidden"
-            android:label="@string/action_add_profile" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:label="@string/action_add_profile"
+            android:parentActivityName=".MainActivity">
         </activity>
         <activity
             android:name=".EditProfileActivity"
             android:windowSoftInputMode="stateHidden"
-            android:label="@string/action_edit_profile" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:label="@string/action_edit_profile"
+            android:parentActivityName=".MainActivity">
         </activity>
         <activity
             android:name=".BrowserIntegrationActivity"
@@ -65,18 +60,14 @@
             android:theme="@android:style/Theme.Holo.Light.Dialog" >
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/action_settings" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:label="@string/action_settings"
+            android:parentActivityName=".MainActivity">
         </activity>
 
         <receiver android:name=".util.MasterKeyAlarmManager" />
@@ -85,10 +76,8 @@
             android:name=".TutorialActivity"
             android:noHistory="true"
             android:screenOrientation="portrait"
-            android:theme="@style/tutorialStyle" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:theme="@style/tutorialStyle"
+            android:parentActivityName=".MainActivity">
         </activity>
     </application>
 
