--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         <activity
             android:name=".BrowserIntegrationActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+            android:theme="@style/Theme.AppCompat.Light.Dialog" >
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
