--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.reddyetwo.hashmypass.app">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -30,7 +31,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Hashmypass" >
+        android:theme="@style/Theme.Hashmypass"
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
