--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile "com.android.support:appcompat-v7:21.0.3"
+    compile 'com.melnykov:floatingactionbutton:1.1.0'
 }
