--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,19 @@
     *
     -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.reddyetwo.hashmypass.app">
+<manifest
+    package="com.reddyetwo.hashmypass.app"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".HashMyPassApplication"
-        android:supportsRtl="false"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:supportsRtl="false"
         android:theme="@style/Theme.Hashmypass"
         tools:ignore="UnusedAttribute">
         <activity
@@ -46,15 +47,15 @@
         </activity>
         <activity
             android:name=".AddProfileActivity"
-            android:windowSoftInputMode="stateHidden"
             android:label="@string/action_add_profile"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
             android:name=".EditProfileActivity"
-            android:windowSoftInputMode="stateHidden"
             android:label="@string/action_edit_profile"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
             android:name=".BrowserIntegrationActivity"
@@ -77,9 +78,9 @@
         <activity
             android:name=".TutorialActivity"
             android:noHistory="true"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/tutorialStyle"
-            android:parentActivityName=".MainActivity">
+            android:theme="@style/tutorialStyle">
         </activity>
     </application>
 
