--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.reddyetwo.hashmypass.app'
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 16
-        versionName '1.3.1'
+        versionCode 17
+        versionName '1.3.2'
     }
     buildTypes {
         release {
@@ -23,6 +23,11 @@ android {
         abortOnError false
     }
     productFlavors {
+    }
+    dependencies {
+        testCompile 'junit:junit:4.12'
+        testCompile 'org.powermock:powermock-module-junit4:1.6.1'
+        testCompile 'org.powermock:powermock-api-mockito:1.6.1'
     }
 }
 
