--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 22
+    buildToolsVersion '22'
     defaultConfig {
         applicationId 'com.reddyetwo.hashmypass.app'
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 20
         versionName '1.3.5'
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -19,17 +20,22 @@ android {
             applicationIdSuffix ".debug"
         }
     }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
+
     lintOptions {
         abortOnError false
     }
+
     productFlavors {
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile "com.android.support:appcompat-v7:21.0.3"
+    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.melnykov:floatingactionbutton:1.1.0'
 }
