--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
     defaultConfig {
         applicationId 'com.reddyetwo.hashmypass.app'
         minSdkVersion 15
-        targetSdkVersion 21
-        versionCode 20
-        versionName '1.3.5'
+        targetSdkVersion 22
+        versionCode 21
+        versionName '1.3.6'
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -19,22 +20,24 @@ android {
             applicationIdSuffix ".debug"
         }
     }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
+
     lintOptions {
         abortOnError false
     }
+
     productFlavors {
-    }
-    dependencies {
-        testCompile 'junit:junit:4.12'
-        testCompile 'org.powermock:powermock-module-junit4:1.6.1'
-        testCompile 'org.powermock:powermock-api-mockito:1.6.1'
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile "com.android.support:appcompat-v7:21.0.3"
-    compile 'com.melnykov:floatingactionbutton:1.1.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 }
