--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.reddyetwo.hashmypass.app'
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 21
-        versionName '1.3.6'
+        versionCode 22
+        versionName '1.3.8'
     }
 
     buildTypes {
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 }
