after receiving panic trigger and locking app, remove from history
This makes the app fully exit, and removes it from the Recent Apps listing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ExitActivity"
+            android:theme="@android:style/Theme.NoDisplay" />
+
+        <activity
             android:name=".tutorial.TutorialActivity"
             android:noHistory="true"
             android:screenOrientation="portrait"
